# Project

./: .gitignore  Directory.Build.props  EnterpriseProcurement.sln  README.md  agent_run.py  ansible.cfg  install.sh  pyproject.toml  requirements.txt  run.py
.github/workflows/: build-release.yml
au_kamra_loan_cards/: __init__.py  auth.py  backup.py  database.py  generator.py  main.py  parsers.py  server.py
au_kamra_loan_cards/samples/: sample_loan_card_ahmed.html  sample_loan_card_sara.html
au_kamra_loan_cards/templates/: agent.html  index.html
aulabs/: __init__.py  __main__.py  agent.py  app.py  auth.py  config.py  database.py  entrypoints.py  setup_wizard.py
aulabs/api/: __init__.py  agents_routes.py  auth_routes.py  deps.py  (+4 more)
docs/: ARCHITECTURE.md  Ansible_Modules_Presentation.pptx  ansible-modules-guide.md  generate_ansible_modules_ppt.py
gali-gang/: .gitignore  README.md  SERIES.md
group_vars/: windows_lan.yml
installer/: EPIMS-Setup.iss
inventory/: hosts.example.yml
packaging/: AULabsAgent.spec  AULabsServer.spec  AULabsSetup.spec  generate_setup_spec.py  run_agent.py  run_server.py  run_setup.py
playbooks/: install-office2016.yml
rmm/: README.md  Start-Server.bat  requirements.txt  run_agent.py  run_server.py
scripts/: AU-Kamra-IT-Loan-Cards.spec  add-awx-office2016-project.sh  add-awx-windows-host.sh  aulabs-install.sh  build-and-test.sh  build-windows.ps1  build_binaries.sh  build_windows.bat  run_windows.bat
systemd/: aulabs.service
tests/: test_core.py
tutorials/: README.md  generate_office_install_tutorial.py  requirements.txt
(+165 files in other folders)
